--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ ADMIN_PASSWORD=Admin@123
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=atriowingstesting@gmail.com
-SMTP_PASS=nnri awox ckkf imuy
+SMTP_PASS=nnriawoxckkfimuy
 RECEIVER_EMAIL=subashcb7799@gmail.com
