--- a/.env
+++ b/.env
@@ -7,4 +7,5 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=atriowingstesting@gmail.com
 SMTP_PASS=nnriawoxckkfimuy
-RECEIVER_EMAIL=subashcb7799@gmail.com
+RECEIVER_EMAIL=elvin@adonisstaff.in
+
