--- a/.env
+++ b/.env
@@ -4,7 +4,9 @@ JWT_SECRET=someverystrongsecret
 ADMIN_EMAIL=admin@adonis.com
 ADMIN_PASSWORD=Admin@123
 SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
+# SMTP_PORT=587
+SMTP_PORT=465
+SMTP_SECURE=true
 SMTP_USER=atriowingstesting@gmail.com
 SMTP_PASS=nnriawoxckkfimuy
 RECEIVER_EMAIL=elvin@adonisstaff.in
