--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ ADMIN_EMAIL=admin@adonis.com
 ADMIN_PASSWORD=Admin@123
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_SECURE=true
+SMTP_SECURE=false
 SMTP_USER=atriowingstesting@gmail.com
 SMTP_PASS=nnriawoxckkfimuy
 RECEIVER_EMAIL=elvin@adonisstaff.in
