--- a/.env
+++ b/.env
@@ -4,9 +4,11 @@ JWT_SECRET=someverystrongsecret
 ADMIN_EMAIL=admin@adonis.com
 ADMIN_PASSWORD=Admin@123
 SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
+SMTP_PORT=465
 SMTP_SECURE=false
-SMTP_USER=atriowingstesting@gmail.com
-SMTP_PASS=nnriawoxckkfimuy
+# SMTP_USER=atriowingstesting@gmail.com
+# SMTP_PASS=nnriawoxckkfimuy
+SMTP_USER=subashcb7799@gmail.com
+SMTP_PASS=wfpx dsft jieb bmpr
 RECEIVER_EMAIL=elvin@adonisstaff.in
 
