--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ ADMIN_EMAIL=admin@adonis.com
 ADMIN_PASSWORD=Admin@123
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
-SMTP_SECURE=false
+SMTP_SECURE=true
 # SMTP_USER=atriowingstesting@gmail.com
 # SMTP_PASS=nnriawoxckkfimuy
 SMTP_USER=subashcb7799@gmail.com
