--- a/.env
+++ b/.env
@@ -3,12 +3,16 @@ PORT=5000
 JWT_SECRET=someverystrongsecret
 ADMIN_EMAIL=admin@adonis.com
 ADMIN_PASSWORD=Admin@123
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=465
-SMTP_SECURE=true
-# SMTP_USER=atriowingstesting@gmail.com
-# SMTP_PASS=nnriawoxckkfimuy
-SMTP_USER=subashcb7799@gmail.com
-SMTP_PASS=wfpx dsft jieb bmpr
-RECEIVER_EMAIL=elvin@adonisstaff.in
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=465
+# SMTP_SECURE=true
+
+SMTP_USER=gloriappan@gmail.com
+SMTP_PASS=rvcy rggt ubjg ymem
+# RECEIVER_EMAIL=elvin@adonisstaff.in
+RESEND_API_KEY=re_CtHk2pVs_BMRHE9NXxigR66ic8VhH5zoX
+# RESEND_SENDER=onboarding@resend.dev   # or verified domain
+RESEND_SENDER=elvin@adonisstaff.in
+RECEIVER_EMAIL=subashcb7799@gmail.com
+
 
