--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ SMTP_USER=gloriappan@gmail.com
 SMTP_PASS=rvcy rggt ubjg ymem
 # RECEIVER_EMAIL=elvin@adonisstaff.in
 RESEND_API_KEY=re_CtHk2pVs_BMRHE9NXxigR66ic8VhH5zoX
-# RESEND_SENDER=onboarding@resend.dev   # or verified domain
-RESEND_SENDER=elvin@adonisstaff.in
+RESEND_SENDER=onboarding@resend.dev   # or verified domain
+
 RECEIVER_EMAIL=subashcb7799@gmail.com
 
 
